# qa_guru_python_4_22_mobile_tests_browserstack

./: pyproject.toml
qa_guru_python_4_22_mobile_tests_browserstack/assist/: browserstack.yml
qa_guru_python_4_22_mobile_tests_browserstack/tests/: browserstck_sample.py  test_open_some_page.py
